---
source: book/tests/snapshot.rs
expression: "from employees_1\nconcat employees_2\n"
input_file: book/tests/prql/transforms/concat-and-union-0.prql
---
(
  SELECT
    *
  FROM
    employees_1
)
UNION
ALL
SELECT
  *
FROM
  employees_2
